--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-family: 'Raleway' sans-serif;
   width: 1600px;
-  margin: 0;
+  margin: auto;
   padding: 0 10px;
   }
   ul {
@@ -26,10 +26,36 @@ body {
   /* Header */
   .hero {
     width: 1200px;
-    margin: 0 215px;
+    margin: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .hero_ {
+    width: 1200px;
+    margin: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .hero-sec {
+    border: 1px solid #ECECEC;
+  }
+  .stud {
+    width: 49px;
+  }
+  .port {
+    width: 77px;
+  }
+  .cont {
+    width: 68px;
+  }
+  .hero_ li:first-child {
+    padding-left: 93px;
+  }
+  .hero_ nav {
+    display: inline-flex;
   }
   .hero li:first-child {
-    margin-left: 93px;
+    padding-left: 93px;
   }
   .hero nav {
     display: inline-flex;
@@ -41,7 +67,7 @@ body {
   font-size: 26px;
   line-height: 1.17;
   text-decoration: none;
-  margin: 24px 0 25px;
+  padding: 24px 0 25px;
  }
 .web {
   font-family: 'Raleway', sans-serif;
@@ -62,7 +88,7 @@ body {
   }
 .navigation li {
   float: left;
-  margin-top: 32px;
+  padding-top: 32px;
   margin-right: 50px;
 }
 .navigation li:last-child {
@@ -74,11 +100,12 @@ body {
 .mail {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
+  width: 135px;
   color: #2196F3;
   font-size: 14px;
   line-height: 1.17;
   text-decoration: none;
-  margin-left: 331px;
+  padding-left: 331px;
   margin-right: 50px;
 }
 .tel {
@@ -91,20 +118,20 @@ body {
 }
 /* Main */
 .container {
-  display: flex;
+  display: block;
+  justify-content: center;
   background: #2F303A;
   width: 1600px;
   height: 600px;
 }
 .title {
-  margin: 200px 452px 30px;
-    width: 696px;
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
     color: #FFFFFF;
     font-size: 44px;
     line-height: 1.3;
     text-align: center;
+    padding: 200px 0 30px;
   }
   .button {
     cursor: pointer;
@@ -118,15 +145,12 @@ body {
     letter-spacing: 0.06em;
     border-radius: 4px;
     margin-left: 700px;
-    margin-right: 700px;
     text-align: center;
-    padding: 10px 30px;
   }
   .container-portf {
-    display: flexbox;
     width: 1200px;
-    margin-left: 215px;
-    margin-right: 215px;
+    padding-top: 94px;
+    margin: auto;
   }
   .container-portf li {
     display: flex;
@@ -140,7 +164,6 @@ body {
     letter-spacing: 0.03em;
     border-radius: 4px;
     float: left;
-    margin-top: 100px;
     margin-right: 8px;
   }
   .container-portf li:nth-child(3n+3) {
@@ -198,18 +221,24 @@ body {
   .container_f {
     width: 1200px;
     display: flex;
-    margin: 0 215px;
-  }
-  .container_f {
-    margin-top: 94px;
-    flex-direction: row;
-    margin-right: 30px;
+    margin: auto;
+    padding-top: 94px;
   }
   .container_f li {
+    float: left;
     margin-right: 30px;
   }
   .container_f li:last-child {
     margin-right: 0;
+  }
+  .container_f h3 {
+    width: 270px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1,14;
+    letter-spacing: 0.03em;
   }
   .text {
     width: 270px;
@@ -235,20 +264,26 @@ body {
     margin-left: 612px;
   }
   .container_s {
-    display: inline-block;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
     width: 1200px;
-    margin-left: 215px;
-    margin-bottom: 94px; 
+    padding-top: 94px;
+    padding-bottom: 94px; 
+    margin: auto;
   }
   .container_s h2 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    margin: auto;
     width: 376px;
-    margin: 94px 397px 50px;
-    text-align: center;
   }
   .images {
-    display: flex;
     float: left;
-    margin-top: 50px;
+    padding-top: 50px;
     margin-right: 30px;
   }
   .images:last-child {
@@ -256,18 +291,23 @@ body {
   }
   .section_t {
     background: #F5F4FA;
+    padding-bottom: 94px;
   }
   .container_t {
     width: 1200px;
-    display: inline-block;
-    width: 1200px;
-    margin-left: 215px;
-    margin-bottom: 94px;
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 94px;
+    margin: auto;
   }
   .container_t h2 {
     width: 264px;
-    margin-top: 94px;
-    margin-left: 453px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    margin: auto;
     text-align: center;
   }
   .name li {
@@ -300,8 +340,8 @@ body {
     flex-wrap: wrap;
     width: 1200px;
     align-items: flex-start;
-    margin-top: 94px;
-    margin-bottom: 94px;
+    padding-top: 50px;
+    padding-bottom: 94px;
     text-align: center;
   }
   .name_port li {
@@ -312,8 +352,8 @@ body {
     margin-top: 50px;
     margin-right: 30px;
     text-align: left;
-    border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border: 1px solid #EEEEEE;
+    box-sizing: border-box;
   }
   .name_port li:last-child {
     margin-right: 0;
@@ -324,10 +364,9 @@ body {
     color: #212121;
     font-size: 16px;
     line-height: 1.12;
-    margin-top: 30px;
   }
   .name_port h3 {
-    margin: 20px 24px 4px;
+    padding: 20px 24px 4px;
     box-align: left;
   }
   .profession {
@@ -336,7 +375,7 @@ body {
     color: #757575;
     font-size: 16px;
     line-height: 1.12;
-    margin-bottom: 24px;
+    padding-bottom: 24px;
   }
   .profession_p {
     font-family: 'Roboto', sans-serif;
@@ -345,8 +384,8 @@ body {
     color: #757575;
     font-size: 16px;
     line-height: 1.12;
-    margin-bottom: 24px;
-    margin-left: 24px;
+    padding-bottom: 24px;
+    padding-left: 24px;
   }
   .type {
     font-family: 'Roboto', sans-serif;
@@ -357,55 +396,57 @@ body {
   }
 
   .footer {
-    display: block;
     background: #2F303A;
     width: 1600px;
     height: 252px;
   }
   .container_fot {
     width: 1200px;
-    margin: 0 215px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    flex-direction: column;
   }
   .studioo {
-    display: inline-block;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     color: #FFFFFF;
     font-size: 26px;
     line-height: 1.15;
     text-decoration: none;
-    margin-top: 60px;
-    margin-bottom: 20px;
+    padding-top: 60px;
   }
   .adres {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
+    width: 231px;
     color: #FFFFFF;
     font-size: 14px;
     line-height: 1.7;
     text-decoration: none;
     font-style: normal;
-    margin-bottom: 9px;
+    padding-top: 20px;
+    padding-bottom: 9px;
   }
   .maill {
-    display: inline-flex;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
+    width: 231px;
     color: rgba(255, 255, 255, 0.6);
     font-size: 14px;
     line-height: 1.7;
     text-decoration: none;
     font-style: normal;
-    margin-bottom: 9px;
+    padding-bottom: 9px;
   }
   .tell {
-    display: inline-flex;
     font-family: 'Roboto', sans-serif;
+    width: 231px;
     font-weight: 400;
     color: rgba(255, 255, 255, 0.6);
     font-size: 14px;
     line-height: 1.7;
     text-decoration: none;
     font-style: normal;
-    margin-bottom: 60px;
+    padding-bottom: 60px;
   }
