--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
 body {
   font-family: 'Roboto', sans-serif;
   font-family: 'Raleway' sans-serif;
-  width: 1600px;
-  margin: auto;
+  margin: 0 auto;
   padding: 0 10px;
   }
   ul {
@@ -32,7 +31,7 @@ body {
   }
   .hero_ {
     width: 1200px;
-    margin: auto;
+    margin: 0 auto;
     padding-left: 10px;
     padding-right: 10px;
   }
@@ -134,6 +133,7 @@ body {
     padding: 200px 0 30px;
   }
   .button {
+    display: block;
     cursor: pointer;
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
@@ -144,13 +144,13 @@ body {
     line-height: 1.8;
     letter-spacing: 0.06em;
     border-radius: 4px;
-    margin-left: 700px;
+    margin: 0 auto;
     text-align: center;
   }
   .container-portf {
     width: 1200px;
     padding-top: 94px;
-    margin: auto;
+    margin: 0 auto;
   }
   .container-portf li {
     display: flex;
@@ -219,10 +219,9 @@ body {
   }
 
   .container_f {
+    display: block;
     width: 1200px;
-    display: flex;
-    margin: auto;
-    padding-top: 94px;
+    margin: 0 auto;
   }
   .container_f li {
     float: left;
@@ -264,13 +263,10 @@ body {
     margin-left: 612px;
   }
   .container_s {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
     width: 1200px;
-    padding-top: 94px;
+    text-align: center;
     padding-bottom: 94px; 
-    margin: auto;
+    margin: 0 auto;
   }
   .container_s h2 {
     font-family: 'Roboto';
@@ -289,16 +285,30 @@ body {
   .images:last-child {
     margin-right: 0;
   }
+  .section {
+    display: inline-block;
+    text-align: center;
+    width: 1600px;
+    padding-bottom: 94px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .section > .container_f {
+    text-align: left;
+  }
   .section_t {
+    display: inline-block;
+    width: 1600px;
+    padding: 94px 0;
     background: #F5F4FA;
     padding-bottom: 94px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
   .container_t {
     width: 1200px;
-    display: flex;
-    flex-wrap: wrap;
-    padding-top: 94px;
-    margin: auto;
+    display: block;
+    margin: 0 auto;
   }
   .container_t h2 {
     width: 264px;
@@ -341,7 +351,6 @@ body {
     width: 1200px;
     align-items: flex-start;
     padding-top: 50px;
-    padding-bottom: 94px;
     text-align: center;
   }
   .name_port li {
