--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Raleway' sans-serif;
   margin: 0 auto;
   padding: 0 10px;
+  width: 1600px;
   }
   ul {
     padding-inline-start: 0;
@@ -31,7 +32,6 @@ body {
     padding-right: 10px;
   }
   .hero_ {
-    width: 1200px;
     text-align: center;
     margin: 0 auto;
     padding-left: 10px;
@@ -39,7 +39,6 @@ body {
   }
   .hero-sec {
     border: 1px solid #ECECEC;
-    width: 1600px;
   }
   .stud {
     width: 49px;
@@ -121,10 +120,8 @@ body {
 }
 /* Main */
 .container {
-  display: block;
-  align-items: center;
-  width: 1600px;
   background: #2F303A;
+  padding: 0 15px;
   height: 600px;
 }
 .title {
@@ -142,6 +139,7 @@ body {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     width: 200px;
+    height: 50px;
     background: #2196F3;
     color: #ffffff;
     font-size: 16px;
@@ -154,7 +152,6 @@ body {
   .container-portf {
     width: 1200px;
     padding-top: 94px;
-    padding-bottom: 94px;
     margin: 0 auto;
   }
   .container-portf li {
@@ -226,17 +223,14 @@ body {
   .container_ {
     width: 1200px;
     margin: 0 auto;
-    padding-top: 94px;
-  }
-  .container_ .images {
-    padding-bottom: 94px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
   .container_ ul {
     display: inline-block;
     list-style: none;
   }
   .container_ .name {
-    padding-bottom: 94px;
     padding-top: 0;
   }
   .container_ li {
@@ -284,7 +278,6 @@ body {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
-    margin: 0 auto;
     width: 376px;
   }
   .images {
@@ -296,16 +289,18 @@ body {
     margin-right: 0;
   }
   .section {
-    max-width: 1600px;
-    padding-left: 15px;
-    padding-right: 15px;
+    display: block;
+    padding-bottom: 94px;
+  }
+  .section:nth-child(4) {
+    background-color: #F5F4FA;
+    padding-top: 94px;
   }
   .section > .container_ {
     text-align: left;
   }
   .section_t {
     align-items: center;
-    width: 1600px;
     padding: 94px 0;
     padding-bottom: 94px;
     padding-left: 15px;
@@ -348,9 +343,9 @@ body {
   .name_port {
     display: inline-flex;
     flex-wrap: wrap;
+    padding-top: 50px;
     width: 1200px;
     align-items: flex-start;
-    padding-top: 50px;
     text-align: center;
   }
   .name_port li {
@@ -358,24 +353,27 @@ body {
     width: 370px;
     flex-wrap: wrap;
     background: #FFFFFF;
-    margin-top: 50px;
+    margin-top: 30px;
     margin-right: 30px;
     text-align: left;
     border: 1px solid #EEEEEE;
     box-sizing: border-box;
+  }
+  .name_port li:nth-child(-n +3) {
+    margin-top: 0;
   }
   .name_port li:last-child {
     margin-right: 0;
   }
   .name_port >li >h3 {
     font-family: 'Roboto', sans-serif;
-    font-weight: 500;
+    font-weight: 700;
     color: #212121;
     font-size: 16px;
-    line-height: 1.12;
+    line-height: 2;
   }
-  .name_port h3 {
-    padding: 20px 24px 4px;
+  .about {
+    padding: 20px 24px;
     box-align: left;
   }
   .profession {
@@ -383,18 +381,16 @@ body {
     font-weight: 400;
     color: #757575;
     font-size: 16px;
-    line-height: 1.12;
+    line-height: 1.18;
     padding-bottom: 24px;
   }
   .profession_p {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    text-align: left;
+    margin-top: 4px;
     color: #757575;
     font-size: 16px;
-    line-height: 1.12;
-    padding-bottom: 24px;
-    padding-left: 24px;
+    line-height: 1.8;
   }
   .type {
     font-family: 'Roboto', sans-serif;
@@ -407,7 +403,6 @@ body {
   .footer {
     background: #2F303A;
     padding: 0 15px;
-    width: 1600px;
     height: 252px;
   }
   .container_fot {
