--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,8 @@ body {
   .container-portf {
     width: 1200px;
     padding-top: 94px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin: 0 auto;
   }
   .container-portf li {
