--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,6 @@ body {
   font-family: 'Roboto', sans-serif;
   font-family: 'Raleway' sans-serif;
   margin: 0 auto;
-  padding: 0 10px;
-  width: 1600px;
   }
   ul {
     padding-inline-start: 0;
@@ -38,7 +36,7 @@ body {
     padding-right: 10px;
   }
   .hero-sec {
-    border: 1px solid #ECECEC;
+    border-bottom: 1px solid #ECECEC;
   }
   .stud {
     width: 49px;
@@ -120,6 +118,8 @@ body {
 }
 /* Main */
 .container {
+  text-align: center;
+  margin: auto;
   background: #2F303A;
   padding: 0 15px;
   height: 600px;
@@ -131,7 +131,7 @@ body {
     font-size: 44px;
     line-height: 1.3;
     text-align: center;
-    padding: 200px 0 30px;
+    padding-top: 200px;
   }
   .button {
     display: block;
@@ -146,7 +146,7 @@ body {
     line-height: 1.8;
     letter-spacing: 0.06em;
     border-radius: 4px;
-    margin: 0 auto;
+    margin: 30px auto 0;
     text-align: center;
   }
   .container-portf {
@@ -164,14 +164,11 @@ body {
     font-weight: 500;
     color: #212121;
     font-size: 16px;
-    line-height: 1.6;
+    line-height: 1.62;
     letter-spacing: 0.03em;
     border-radius: 4px;
     float: left;
     margin-right: 8px;
-  }
-  .container-portf li:nth-child(3n+3) {
-    margin-right: 0;
   }
   .container-portf button {
     background: #F5F4FA;
@@ -237,6 +234,8 @@ body {
   }
   .container_ li {
     display: inline-block;
+    float: left;
+    margin-top: 50px;
     margin-right: 30px;
   }
   .container_ li:last-child {
@@ -283,8 +282,6 @@ body {
     width: 376px;
   }
   .images {
-    float: left;
-    padding-top: 50px;
     margin-right: 30px;
   }
   .images:last-child {
@@ -292,6 +289,7 @@ body {
   }
   .section {
     display: block;
+    margin: auto;
     padding-bottom: 94px;
   }
   .section:nth-child(4) {
@@ -338,10 +336,6 @@ body {
     line-height: 1.12;
     margin-top: 30px;
   }
-  .name p {
-    margin-top: 10px;
-    margin-bottom: 30px;
-  }
   .name_port {
     display: inline-flex;
     flex-wrap: wrap;
@@ -378,13 +372,16 @@ body {
     padding: 20px 24px;
     box-align: left;
   }
+  .about_ {
+    padding: 30px 0;
+  }
   .profession {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     color: #757575;
     font-size: 16px;
     line-height: 1.18;
-    padding-bottom: 24px;
+    margin-top: 10px;
   }
   .profession_p {
     font-family: 'Roboto', sans-serif;
@@ -404,6 +401,7 @@ body {
 
   .footer {
     background: #2F303A;
+    margin: auto;
     padding: 0 15px;
     height: 252px;
   }
