--- a/css/styles.css
+++ b/css/styles.css
@@ -419,7 +419,7 @@ body {
     font-size: 26px;
     line-height: 1.15;
     text-decoration: none;
-    padding-top: 60px;
+    margin-top: 60px;
   }
   .adres {
     font-family: 'Roboto', sans-serif;
@@ -430,8 +430,8 @@ body {
     line-height: 1.7;
     text-decoration: none;
     font-style: normal;
-    padding-top: 20px;
-    padding-bottom: 9px;
+    margin-top: 20px;
+    margin-bottom: 9px;
   }
   .maill {
     font-family: 'Roboto', sans-serif;
@@ -442,7 +442,7 @@ body {
     line-height: 1.7;
     text-decoration: none;
     font-style: normal;
-    padding-bottom: 9px;
+    margin-bottom: 9px;
   }
   .tell {
     font-family: 'Roboto', sans-serif;
@@ -453,5 +453,5 @@ body {
     line-height: 1.7;
     text-decoration: none;
     font-style: normal;
-    padding-bottom: 60px;
+    margin-bottom: 60px;
   }
