--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 body {
   font-family: 'Roboto', sans-serif;
   font-family: 'Raleway' sans-serif;
@@ -47,12 +48,6 @@ body {
   .cont {
     width: 68px;
   }
-  .hero_ li:first-child {
-    padding-left: 93px;
-  }
-  .hero li:first-child {
-    padding-left: 93px;
-  }
   .hero nav {
     display: inline-flex;
   }
@@ -84,14 +79,17 @@ body {
   line-height: 1.17;
   text-decoration: none;
   word-spacing: 50px;
+  margin-right: 50px;
   }
-.navigation li {
-  display: inline-block;
-  text-align: center;
+.navigation {
+  display: inline-flex;
+  margin-left: 93px;
+  margin-right: 50px;
   padding-top: 32px;
+  padding-bottom: 32px;
   margin-right: 50px;
 }
-.navigation li:last-child {
+.navigation .cont {
   margin-right: 0;
 }
 .navigation > li >a:hover {
@@ -105,7 +103,7 @@ body {
   font-size: 14px;
   line-height: 1.17;
   text-decoration: none;
-  padding-left: 331px;
+  margin-left: 331px;
   margin-right: 50px;
 }
 .tel {
@@ -121,8 +119,10 @@ body {
   text-align: center;
   margin: auto;
   background: #2F303A;
-  padding: 0 15px;
-  height: 600px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .title {
     font-family: 'Roboto', sans-serif;
@@ -131,7 +131,6 @@ body {
     font-size: 44px;
     line-height: 1.3;
     text-align: center;
-    padding-top: 200px;
   }
   .button {
     display: block;
@@ -151,7 +150,6 @@ body {
   }
   .container-portf {
     width: 1200px;
-    padding-top: 94px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
@@ -219,34 +217,31 @@ body {
     color: #ffffff;
   }
 
-  .container_ {
+  .container_second {
+    display: flex;
+    flex-wrap: wrap;
     width: 1200px;
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
   }
-  .container_ ul {
-    display: inline-block;
-    list-style: none;
+  .container_second ul {
+    margin-top: 50px;
   }
-  .container_ .name {
-    padding-top: 0;
-  }
-  .container_ li {
+  .container_second li {
     display: inline-block;
     float: left;
-    margin-top: 50px;
     margin-right: 30px;
   }
-  .container_ li:last-child {
+  .container_second li:last-child {
     margin-right: 0;
   }
-  .container_ h3 {
+  .container_second h3 {
     width: 270px;
     font-family: 'Roboto';
     font-style: normal;
-    font-weight: 700;
-    font-size: 14px;
+    font-weight: 500;
+    font-size: 16px;
     line-height: 1,14;
     letter-spacing: 0.03em;
   }
@@ -273,7 +268,7 @@ body {
     margin-top: 289px;
     margin-left: 612px;
   }
-  .container_ h2 {
+  .container_second h2 {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -288,15 +283,16 @@ body {
     margin-right: 0;
   }
   .section {
-    display: block;
-    margin: auto;
-    padding-bottom: 94px;
+    display:block;
+    align-content: center;
+    margin: 0 auto;
+    padding: 94px 0;
   }
   .section:nth-child(4) {
     background-color: #F5F4FA;
     padding-top: 94px;
   }
-  .section > .container_ {
+  .section > .container_second {
     text-align: left;
   }
   .section_t {
@@ -306,7 +302,7 @@ body {
     padding-left: 15px;
     padding-right: 15px;
   }
-  .container_ h2 {
+  .container_second h2 {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -319,7 +315,6 @@ body {
     background: #FFFFFF;
     float: left;
     width: 270;
-    margin-top: 50px;
     margin-right: 30px;
     text-align: center;
     border-radius: 0px 0px 4px 4px;
@@ -339,7 +334,7 @@ body {
   .name_port {
     display: inline-flex;
     flex-wrap: wrap;
-    padding-top: 50px;
+    margin-top: 50px;
     width: 1200px;
     align-items: flex-start;
     text-align: center;
@@ -402,8 +397,7 @@ body {
   .footer {
     background: #2F303A;
     margin: auto;
-    padding: 0 15px;
-    height: 252px;
+    padding: 60px 15px;
   }
   .container_fot {
     width: 1200px;
