--- a/css/styles.css
+++ b/css/styles.css
@@ -41,12 +41,42 @@ body {
   }
   .stud {
     width: 49px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    color: #212121;
+    font-size: 14px;
+    line-height: 1.17;
+    word-spacing: 50px;
+    margin-right: 50px;
   }
   .port {
     width: 77px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    color: #212121;
+    font-size: 14px;
+    line-height: 1.17;
+    word-spacing: 50px;
+    margin-right: 50px;
   }
   .cont {
     width: 68px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    color: #212121;
+    font-size: 14px;
+    line-height: 1.17;
+    word-spacing: 50px;
+    margin-right: 0;
   }
   .hero nav {
     display: inline-flex;
@@ -71,23 +101,11 @@ body {
   line-height: 1.17;
   text-decoration: none;
 }
-.navigation li a {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-  color: #212121;
-  font-size: 14px;
-  line-height: 1.17;
-  text-decoration: none;
-  word-spacing: 50px;
-  margin-right: 50px;
-  }
 .navigation {
   display: inline-flex;
+  flex-wrap: wrap;
+  align-content: center;
   margin-left: 93px;
-  margin-right: 50px;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  margin-right: 50px;
 }
 .navigation .cont {
   margin-right: 0;
@@ -117,16 +135,14 @@ body {
 /* Main */
 .container {
   text-align: center;
-  margin: auto;
+  margin: 0 auto;
   background: #2F303A;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 200px;
   padding-bottom: 200px;
 }
 .title {
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
+    padding-top: 200px;
     color: #FFFFFF;
     font-size: 44px;
     line-height: 1.3;
@@ -139,6 +155,7 @@ body {
     font-weight: 700;
     width: 200px;
     height: 50px;
+    margin-bottom: 200px;
     background: #2196F3;
     color: #ffffff;
     font-size: 16px;
@@ -220,12 +237,13 @@ body {
   .container_second {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     width: 1200px;
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
   }
-  .container_second ul {
+  .photo {
     margin-top: 50px;
   }
   .container_second li {
@@ -242,8 +260,16 @@ body {
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 1,14;
+    line-height: 1.14;
     letter-spacing: 0.03em;
+  }
+  .title-first {
+    font-family: 'Roboto';
+    font-style: normal;
+    color: #212121;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 0.8;
   }
   .text {
     width: 270px;
@@ -282,17 +308,25 @@ body {
   .images:last-child {
     margin-right: 0;
   }
-  .section {
+section {
     display:block;
     align-content: center;
     margin: 0 auto;
     padding: 94px 0;
   }
-  .section:nth-child(4) {
+section:nth-child(4) {
     background-color: #F5F4FA;
     padding-top: 94px;
   }
-  .section > .container_second {
+section:nth-child(1) {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+section:nth-child(3) {
+  padding-top: 0;
+  padding-bottom: 94px;
+}
+section > .container_second {
     text-align: left;
   }
   .section_t {
@@ -310,6 +344,9 @@ body {
     line-height: 1.16;
     margin: auto;
     text-align: center;
+  }
+  .name {
+    margin-top: 50px;
   }
   .name li {
     background: #FFFFFF;
@@ -396,24 +433,18 @@ body {
 
   .footer {
     background: #2F303A;
-    margin: auto;
-    padding: 60px 15px;
-  }
-  .container_fot {
-    width: 1200px;
-    display: flex;
-    flex-wrap: wrap;
-    margin: auto;
-    flex-direction: column;
+    margin: 0 auto;
+    padding: 60px 0;
   }
   .studioo {
+    width: 145px;
+    height: 31px;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     color: #FFFFFF;
     font-size: 26px;
     line-height: 1.15;
     text-decoration: none;
-    margin-top: 60px;
   }
   .adres {
     font-family: 'Roboto', sans-serif;
@@ -426,6 +457,7 @@ body {
     font-style: normal;
     margin-top: 20px;
     margin-bottom: 9px;
+    flex-direction: column;
   }
   .maill {
     font-family: 'Roboto', sans-serif;
@@ -447,5 +479,5 @@ body {
     line-height: 1.7;
     text-decoration: none;
     font-style: normal;
-    margin-bottom: 60px;
+    margin-top: 9px;
   }
